--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,7 @@
 find_package(Boost 1.78.0 REQUIRED)
 
 file(GLOB server_srcs ${CMAKE_CURRENT_SOURCE_DIR}/server/*.cpp)
-file(GLOB server_headers ${CMAKE_CURRENT_SOURCE_DIR}/server/*.hpp)
-include_directories(${server_headers})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/server)
 
 add_library(libserver SHARED ${server_srcs})
 add_executable(client client.cpp)
