Fix pieces hashing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,12 @@ project(BitTorrent)
 
 set(CMAKE_CXX_STANDARD 23)
 
+include(CheckTypeSize)
+check_type_size("uint" UINT)
+if ("${UINT}" STREQUAL "")
+	message(FATAL_ERROR "uint must be available.")
+endif()
+
 add_subdirectory(src)
 add_subdirectory(test)
 
