--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,10 @@
 find_package(Boost 1.78.0 REQUIRED)
 
-file(GLOB torrent_srcs ${CMAKE_CURRENT_SOURCE_DIR}/torrent/*.cpp)
+file(GLOB torrent_srcs ${CMAKE_CURRENT_SOURCE_DIR}/torrent/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/torrent/bencoding/*.cpp)
 file(GLOB cli_srcs ${CMAKE_CURRENT_SOURCE_DIR}/cli/*.cpp)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/torrent)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/bencoding)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cli)
 
 add_library(libclient SHARED ${torrent_srcs})
