Parsing bencoded files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 project(BitTorrent)
 
 set(CMAKE_CXX_STANDARD 23)
+# add_compile_options(-Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -Wcast-align -Wold-style-cast -Wunused -Woverloaded-virtual -Wpedantic -Wconversion -Wsign-conversion -Wmisleading-indentation -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -Wuseless-cast -Wdouble-promotion -Wformat=2 -Wlifetime -Weverything)
 
 include(CheckTypeSize)
 check_type_size("uint" UINT)
@@ -12,4 +13,6 @@ endif()
 add_subdirectory(src)
 add_subdirectory(test)
 
-include_directories(${CMAKE_SOURCE_DIR}/external/uuid)
+include(cmake/CPM.cmake)
+CPMAddPackage("gh:boostorg/uuid#boost-1.78.0")
+CPMAddPackage("gh:boostorg/variant#boost-1.78.0")
