--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,8 @@
-find_package(Boost 1.78.0 REQUIRED)
-
 add_subdirectory(torrent)
 add_subdirectory(utils)
 add_subdirectory(cli)
+add_subdirectory(tracker)
 
 add_executable(main main.cpp)
 
-target_link_libraries(main ${Boost_LIBRARIES} pthread boost_program_options torrent cli utils)
+target_link_libraries(main ${Boost_LIBRARIES} pthread boost_program_options torrent cli utils tracker)
