--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(BitTorrent)
 
 set(CMAKE_CXX_STANDARD 20)
-set(common_flags -fdiagnostics-color=always -Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -Wcast-align -Wold-style-cast -Wunused -Woverloaded-virtual -Wpedantic -Wconversion -Wsign-conversion -Wmisleading-indentation -Wnull-dereference -Wdouble-promotion -Wformat=2)
+set(common_flags -fdiagnostics-color=always -Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -Wcast-align -Wold-style-cast -Wunused -Wunused-variable -Woverloaded-virtual -Wpedantic -Wconversion -Wsign-conversion -Wmisleading-indentation -Wnull-dereference -Wdouble-promotion -Wformat=2)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 	add_compile_options(${common_flags} -fcolor-diagnostics)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
@@ -15,6 +15,7 @@ include(cmake/CPM.cmake)
 CPMAddPackage("gh:boostorg/uuid#boost-1.78.0")
 CPMAddPackage("gh:boostorg/variant#boost-1.78.0")
 CPMAddPackage("gh:gabime/spdlog@1.9.2")
+CPMAddPackage("gh:eranpeer/FakeIt#2.0.9")
 
 enable_testing()
 add_subdirectory(src)
