--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,7 @@
 		"variant": "cpp",
 		"*.inc": "cpp",
 		"ciso646": "cpp",
-		"shared_mutex": "cpp"
+		"shared_mutex": "cpp",
+		"ranges": "cpp"
 	}
 }
