--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -2,5 +2,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 file(GLOB_RECURSE srcs ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
 
-add_library(tracker STATIC ${srcs})
-target_link_libraries(tracker utils)
+add_library(client STATIC ${srcs})
+target_link_libraries(client utils)
