--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,3 @@
-include_directories(${Boost_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/src)
-
-file(GLOB_RECURSE unit_srcs ${CMAKE_CURRENT_SOURCE_DIR}/src *.cpp)
-
-add_executable(unit_test ${unit_srcs} main.cpp)
-target_link_libraries(unit_test ${Boost_LIBRARIES} torrent utils tracker)
-
 file(COPY fixtures DESTINATION .)
 file(COPY e2e DESTINATION .)
 
@@ -13,7 +6,8 @@ add_test(
 	COMMAND python3 e2e/main.py
 )
 
-add_test(unit_test unit_test)
+add_subdirectory(unit)
+add_test(unit_test unit/unit_test)
 
 add_custom_target(check 
 	COMMAND ${CMAKE_CTEST_COMMAND} --verbose 
