--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,16 @@ cmake_minimum_required(VERSION 3.10)
 project(BitTorrent)
 
 set(CMAKE_CXX_STANDARD 20)
-set(common_flags -fdiagnostics-color=always -Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -Wcast-align -Wold-style-cast -Wunused -Wunused-variable -Woverloaded-virtual -Wpedantic -Wconversion -Wsign-conversion -Wmisleading-indentation -Wnull-dereference -Wdouble-promotion -Wformat=2)
+set(common_flags -g -fdiagnostics-color=always -Wall -Wextra -Wshadow -Wnon-virtual-dtor -pedantic -Wcast-align -Wold-style-cast -Wunused -Wunused-variable -Woverloaded-virtual -Wpedantic -Wconversion -Wsign-conversion -Wmisleading-indentation -Wnull-dereference -Wdouble-promotion -Wformat=2)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 	add_compile_options(${common_flags} -fcolor-diagnostics)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 	add_compile_options(${common_flags} -Wuseless-cast -Wlogical-op -Wduplicated-branches -Wduplicated-cond) 
 endif()
 
-find_package(Boost 1.78.0 REQUIRED)
+find_package(Boost 1.74.0 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS unit_test_framework filesystem)
+find_package(Backward)
 include(cmake/CPM.cmake)
 CPMAddPackage("gh:boostorg/uuid#boost-1.78.0")
 CPMAddPackage("gh:boostorg/variant#boost-1.78.0")
