--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,4 @@ add_subdirectory(client)
 
 add_executable(main main.cpp)
 
-target_link_libraries(main ${Boost_LIBRARIES} pthread boost_program_options torrent cli utils client)
+target_link_libraries(main ${Boost_LIBRARIES} pthread boost_program_options Backward::Backward torrent cli utils client)
